5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4136/executions/1747_3091.log
== SUBMITION (2019-05-16 11:11:55) 
-- CODE:
V = 3
E = 1
D = nenhum ponto
t = atletico da computacao
while(t == V):
	print(3)
	  (t == E)
	print(1)
	  (t == D)
	print(0)
		

-- EXECUTION TIME:
0.183355
-- ERROR:
  File "/home/codebench/codes/1747/3091/main.py", line 3
    D = nenhum ponto
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:11:58) 
-- CODE:
V = 3
E = 1
D = nenhum ponto
t = atletico da computacao
while(t == V):
	print(3)
	  (t == E)
	print(1)
	  (t == D)
	print(0)
		

-- ERROR:
File "XXXX", line 3
    D = nenhum ponto
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:12:20) 
-- CODE:
V = 3
E = 1
D = nenhum ponto
t = atletico da computacao
while(t == V):
	print(3)
	  (t == E)
	print(1)
	  (t == D)
	print(nenhum ponto)
		

-- EXECUTION TIME:
0.307589
-- ERROR:
  File "/home/codebench/codes/1747/3091/main.py", line 3
    D = nenhum ponto
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:12:22) 
-- CODE:
V = 3
E = 1
D = nenhum ponto
t = atletico da computacao
while(t == V):
	print(3)
	  (t == E)
	print(1)
	  (t == D)
	print(nenhum ponto)
		

-- ERROR:
File "XXXX", line 3
    D = nenhum ponto
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:12:41) 
-- CODE:
V = 3
E = 1
D = "nenhum ponto"
t = atletico da computacao
while(t == V):
	print(3)
	  (t == E)
	print(1)
	  (t == D)
	print(nenhum ponto)
		

-- EXECUTION TIME:
0.199206
-- ERROR:
  File "/home/codebench/codes/1747/3091/main.py", line 4
    t = atletico da computacao
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:12:43) 
-- CODE:
V = 3
E = 1
D = "nenhum ponto"
t = atletico da computacao
while(t == V):
	print(3)
	  (t == E)
	print(1)
	  (t == D)
	print(nenhum ponto)
		

-- ERROR:
File "XXXX", line 4
    t = atletico da computacao
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:21:34) 
-- CODE:
j1 = float(input("resultado: "))
j2 = float(input("resultado: "))
j3 = float(input("resultado: "))





V = 3
E = 1
D = "nenhum ponto"
t = "atletico da computacao"
while(t == V):
	print(3)
	  (t == E)
	print(1)
	  (t == D)
	print(nenhum ponto)
		

-- ERROR:
File "XXXX", line 15
    (t == E)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:21:35) 
-- CODE:
j1 = float(input("resultado: "))
j2 = float(input("resultado: "))
j3 = float(input("resultado: "))





V = 3
E = 1
D = "nenhum ponto"
t = "atletico da computacao"
while(t == V):
	print(3)
	  (t == E)
	print(1)
	  (t == D)
	print(nenhum ponto)
		

-- ERROR:
File "XXXX", line 15
    (t == E)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:21:37) 
-- CODE:
j1 = float(input("resultado: "))
j2 = float(input("resultado: "))
j3 = float(input("resultado: "))





V = 3
E = 1
D = "nenhum ponto"
t = "atletico da computacao"
while(t == V):
	print(3)
	  (t == E)
	print(1)
	  (t == D)
	print(nenhum ponto)
		

-- EXECUTION TIME:
0.145609
-- ERROR:
  File "/home/codebench/codes/1747/3091/main.py", line 15
    (t == E)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:27:52) 
-- CODE:
j1 = float(input("resultado: "))
j2 = float(input("resultado: "))
j3 = float(input("resultado: "))





V = 3
E = 1
D = "nenhum ponto"
t = "atletico da computacao"
while(t == V):
	print(3)
	  (t == E)
	print(1)
	  (t == D)
	print(nenhum ponto)
		

-- ERROR:
File "XXXX", line 15
    (t == E)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
